[package]
name = "device-cookies"
version = "0.1.0"
authors = ["Valentin Brandl <vbrandl@riseup.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
ring = "0.16.9"

[dev-dependencies]
proptest = "0.9.4"
